[project]
name = "vibelink-bot"
version = "0.1.0"
description = "Telegram bot for finding people by interests"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20,<4.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.16,<2.0",
    "pydantic-settings>=2.10,<3.0",
    "redis>=6.2,<7.0",
    "python-dotenv>=1.0,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<2.0",
    "ruff>=0.9,<1.0",
    "pyright>=1.1,<2.0",
    "typer>=0.16,<0.17",
    "faker>=37.6.0,<38.0",
]

[project.scripts]
vibelink-bot = "app.bot.main:run"

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = []

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"